5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1798_2565.log
== SUBMITION (2019-06-05 15:44:25) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zero(3, dtype=int)

for elemento in rage(size(vet1))
	x = ch*75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[1] + 1

		print(vetn)
		

-- EXECUTION TIME:
0.820412
-- ERROR:
  File "/home/codebench/codes/1798/2565/main.py", line 7
    for elemento in rage(size(vet1))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:44:29) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zero(3, dtype=int)

for elemento in rage(size(vet1))
	x = ch*75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[1] + 1

print(vetn)
		

-- EXECUTION TIME:
0.7577
-- ERROR:
  File "/home/codebench/codes/1798/2565/main.py", line 7
    for elemento in rage(size(vet1))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:45:18) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zero(3, dtype=int)
ch = int(input("carga horaria: "))

for elemento in rage(size(vet1))
	x = ch*75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[1] + 1

print(vetn)
		

-- EXECUTION TIME:
0.564427
-- ERROR:
  File "/home/codebench/codes/1798/2565/main.py", line 8
    for elemento in rage(size(vet1))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:45:26) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zero(3, dtype=int)
ch = int(input("carga horaria: "))

for elemento in rage(size(vet1))
	x = ch*75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[1] + 1

print(vetn)
		

-- EXECUTION TIME:
0.884163
-- ERROR:
  File "/home/codebench/codes/1798/2565/main.py", line 8
    for elemento in rage(size(vet1))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:45:57) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zero(3, dtype=int)
ch = int(input("carga horaria: "))

for elemento in rage(size(vet1))
	x = ch*75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[1] + 1

print(vetn)
		

-- EXECUTION TIME:
0.502269
-- ERROR:
  File "/home/codebench/codes/1798/2565/main.py", line 8
    for elemento in rage(size(vet1))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:47:12) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zero(3, dtype=int)
ch = int(input("carga horaria: "))

for elemento in rage(size(vet1))
	x = ch*75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[2] + 1

print(vetn)
		

-- EXECUTION TIME:
0.763247
-- ERROR:
  File "/home/codebench/codes/1798/2565/main.py", line 8
    for elemento in rage(size(vet1))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:47:54) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zero(3, dtype=int)
ch = int(input("carga horaria: "))

for elemento in range(size(vet1))
	x = ch * 75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[2] + 1

print(vetn)
		

-- EXECUTION TIME:
0.721182
-- ERROR:
  File "/home/codebench/codes/1798/2565/main.py", line 8
    for elemento in range(size(vet1))
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:48:06) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zero(3, dtype=int)
ch = int(input("carga horaria: "))

for elemento in range(size(vet1)):
	x = ch * 75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[2] + 1

print(vetn)
		

-- EXECUTION TIME:
1.20695
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2565/main.py", line 5, in <module>
    vetn = zero(3, dtype=int)
NameError: name 'zero' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:48:17) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zero(3, dtype=int)
ch = int(input("carga horaria: "))

for elemento in range(size(vet1)):
	x = ch * 75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[2] + 1

print(vetn)
		

-- EXECUTION TIME:
1.1805
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2565/main.py", line 5, in <module>
    vetn = zero(3, dtype=int)
NameError: name 'zero' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:49:07) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zero(3, dtype=int)
ch = int(input("carga horaria: "))

for elemento in range(size(vet1)):
	x = ch * 75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[2] + 1

print(vetn)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:49:07) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zero(3, dtype=int)
ch = int(input("carga horaria: "))

for elemento in range(size(vet1)):
	x = ch * 75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[2] + 1

print(vetn)
		

-- EXECUTION TIME:
1.07803
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2565/main.py", line 5, in <module>
    vetn = zero(3, dtype=int)
NameError: name 'zero' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:49:33) 
-- CODE:
from numpy import*

vet1 = array(eval(input("media:")))
vet2 = array(eval(input("frequencia:")))
vetn = zeros(3, dtype=int)
ch = int(input("carga horaria: "))

for elemento in range(size(vet1)):
	x = ch * 75/100
	if(vet1[elemento] >= 5) and (vet2[elemento] >= x):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] < 5):
		vetn[1] = vetn[1] + 1
	elif(vet2[elemento] < x):
		vetn[2] = vetn[2] + 1

print(vetn)
		

-- EXECUTION TIME:
1.12568
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
